Fixing the alignment of the table in checkout

--- a/web/shoppingCart/shopping_cart_style.css
+++ b/web/shoppingCart/shopping_cart_style.css
@@ -3,7 +3,7 @@ h1.thankyou {
 	color: blue;
 }
 
-table, th, td{
+th, td{
    	border: 1px solid black;
 }
 
@@ -17,4 +17,6 @@ div.center {
 }
 table.center{
 	text-align: center;
+	margin: auto;
+	border: 1px solid black;
 }
